# bluefin

./: CMakeLists.txt  LICENSE  Makefile  MakefileOLD.mk  README  README.md  log_cc7_new.txt  log_cc7_old.txt  makeAll  release.notes  setup.csh  setup.sh  setupLCG.sh  tests.sh
BlueFin/: BlueFish.h  BlueFish1Obs.h  InfoAnalyzer.h  InfoMinimizer.h  InputParser.h  Matrix.h  TextReporter.h  Vector.h  VersionInfo.h  boost_ublas_matrix_headers.h  boost_ublas_vector_headers.h
cmake/: FindROOT.cmake  FindTBB.cmake
examples/dataBRW/: Ex2_m15.bfin  Ex2_m15.tex  Ex2_m15.tex.ref  Ex2_m15_bluefin.log.ref  Ex2_m15_body.tex.ref  Ex2_p15.bfin  Ex2_p15.tex  Ex2_p15.tex.ref  Ex2_p15_bluefin.log.ref  Ex2_p15_body.tex.ref
examples/dataMIS/: misc201806RNflag0.bfin  misc201806RNflag0.tex  misc201806RNflag0.tex.ref  misc201806RNflag0_bluefin.log.ref  misc201806RNflag0_body.tex.ref  misc201806RNflag1.bfin  misc201806RNflag1.tex.ref  misc201806RNflag1_bluefin.log.ref  misc201806RNflag1_body.tex.ref
examples/dataSWW/: sww.bfin  sww.tex  sww.tex.ref  sww_bluefin.log.ref  sww_body.tex  sww_body.tex.ref
examples/dataTOP/: lhc2012.bfin  lhc2012.tex  lhc2012.tex.ref  lhc2012_bluefin.log.ref  lhc2012_body.tex  lhc2012_body.tex.ref  lhc2012bJESonly.bfin  lhc2012bJESonly.tex  lhc2012bJESonly.tex.ref  lhc2012bJESonly_bluefin.log.ref  lhc2012bJESonly_body.tex.ref
examples/dataXSE/: xsePaper1.bfin  xsePaper1.tex  xsePaper1.tex.ref  xsePaper1_bluefin.log.ref  xsePaper1_body.tex  xsePaper2.bfin  xsePaper2.tex  xsePaper2.tex.ref  xsePaper2_bluefin.log.ref  xsePaper2_body.tex  xsePaper2_body.tex.ref  xsePaper3.bfin  xsePaper3.tex  xsePaper3.tex.ref  xsePaper3_bluefin.log.ref  xsePaper3_body.tex  xsePaper3_body.tex.ref  xsePaper4.bfin  xsePaper4.tex  xsePaper4.tex.ref  xsePaper4_bluefin.log.ref  xsePaper4_body.tex  xsePaper4_body.tex.ref
prebuilt/centos7/: bluefin  setup.csh  setup.sh
prebuilt/slc6/: bluefin  setup.csh  setup.sh
src/: BlueFish.cpp  BlueFish1Obs.cpp  InfoAnalyzer.cpp  InfoMinimizer.cpp  InputParser.cpp  TextReporter.cpp  boost_bind_headers.h
utilities/: BlueFinReport.tex  bluefin.cpp
